Stop SoundBrowser controls wrapping when browser window is narrow.

--- a/source/scss/soundBrowser/soundBrowser.scss
+++ b/source/scss/soundBrowser/soundBrowser.scss
@@ -1,6 +1,7 @@
 .sound-browser-controls {
 	font-size: 0; // remove gaps between inline-blocks
 	margin: 16px 0;
+	white-space: nowrap;
 }
 
 .sounds table {
